--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,18 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">QA</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">14,089</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">13,743</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">QA &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">script.TestClass2</td><td><a href="#m0">testLogin</a></td><td rowspan="1">1658759595327</td><td rowspan="1">3</td></tr><tr><th colspan="4">QA &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">script.TestClass1</td><td><a href="#m1">testA</a></td><td rowspan="1">1658759589460</td><td rowspan="1">10</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">script.InvalidLogin</td><td><a href="#m0">testInvalidLogin</a></td><td rowspan="1">1658920906497</td><td rowspan="1">2517</td></tr></tbody>
 </table>
-<h2>QA</h2><h3 id="m0">script.TestClass2#testLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: null
-	at script.TestClass2.testLogin(TestClass2.java:19)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
-	at java.base/java.lang.Thread.run(Thread.java:833)
-... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">script.TestClass1#testA</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">script.InvalidLogin#testInvalidLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
