--- a/result/Report.html
+++ b/result/Report.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jul 27, 2022 04:51:35 pm</span></a>
+<a href="#"><span class="badge badge-primary">Jul 29, 2022 08:01:02 am</span></a>
 </li>
 </ul>
 </div>
@@ -81,7 +81,7 @@
           <div class="test-detail">
             <p class="name">testInvalidLogin</p>
             <p class="text-sm">
-              <span>4:51:36 pm</span> / <span>00:00:13:003</span>
+              <span>8:01:02 am</span> / <span>00:00:27:795</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -90,9 +90,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testInvalidLogin</h5>
-<span class='badge badge-success'>07.27.2022 4:51:36 pm</span>
-<span class='badge badge-danger'>07.27.2022 4:51:49 pm</span>
-<span class='badge badge-default'>00:00:13:003</span>
+<span class='badge badge-success'>07.29.2022 8:01:02 am</span>
+<span class='badge badge-danger'>07.29.2022 8:01:30 am</span>
+<span class='badge badge-default'>00:00:27:795</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -104,91 +104,91 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:36 pm</td>
+        <td>8:01:02 am</td>
         <td>
           Use Grid to Execute?NO
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:36 pm</td>
+        <td>8:01:02 am</td>
         <td>
           Browser is:firefox
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:37 pm</td>
+        <td>8:01:06 am</td>
         <td>
           Set the path of driver exe:C:\Users\harsh\.cache\selenium\geckodriver\win64\0.31.0\geckodriver.exe
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:37 pm</td>
+        <td>8:01:06 am</td>
         <td>
           Open the browser
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:41 pm</td>
+        <td>8:01:12 am</td>
         <td>
           Set the ITO:10
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:41 pm</td>
+        <td>8:01:12 am</td>
         <td>
           Set the ETO:12
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:46 pm</td>
+        <td>8:01:25 am</td>
         <td>
           Enter the URL:https://demo.actitime.com/login.do
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:47 pm</td>
+        <td>8:01:27 am</td>
         <td>
           Enter invalid user name:admin
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:47 pm</td>
+        <td>8:01:27 am</td>
         <td>
           Enter invalid password:Dmanager
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:47 pm</td>
+        <td>8:01:28 am</td>
         <td>
           Click on login Button
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:49 pm</td>
+        <td>8:01:30 am</td>
         <td>
           Verify Err Msg is displyed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:51:49 pm</td>
+        <td>8:01:30 am</td>
         <td>
           testInvalidLogin is pass
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:51:49 pm</td>
+        <td>8:01:30 am</td>
         <td>
           Close the browser
         </td>
@@ -212,13 +212,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jul 27, 2022 04:51:35 pm</h3>
+<h3>Jul 29, 2022 08:01:02 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jul 27, 2022 04:51:49 pm</h3>
+<h3>Jul 29, 2022 08:01:32 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -288,7 +288,7 @@
 </div></div>
 <script>
 var timeline = {
-"testInvalidLogin":13.003
+"testInvalidLogin":27.795
 };
 </script>
 <div class="row">
